# paav2015

./: CMakeLists.txt  do.sh  run_tests.sh
autoPar/: autoPar.py  glue.py  glueUnitTest.py  injectPlanner.py  lineInject.py  timeStringGenerator.py
benchmark/: builed.sh  readme.txt  run_benchmark.sh
benchmark/c-ray/seq/: Makefile
benchmark/h264dec/: Makefile.am  configure.ac  h264dec.c
benchmark/h264dec/libavcodec/: Makefile.am  avcodec.h  dsputil.c  h264.c  h264.h  h264_cell.c  h264_deblock.c  h264_deblock.h  h264_entropy.c  h264_entropy.h  h264_idct.c  h264_idct.h  h264_mc.c  h264_mc.h  h264_misc.c  h264_misc.h  h264_nal.c  h264_nal.h  h264_numa.c  h264_ompss.c  h264_parser.h  h264_pred_mode.c  h264_pred_mode.h  h264_ps.h  h264_pthread.c  h264_pthread.h  h264_rec.c  h264_rec.h  h264_refs.c  h264_refs.h  h264_sei.h  h264_seq.c  h264_types.h
benchmark/h264dec/libavcodec/cell/: dsputil_spu.h  h264_cabac_spu.c  h264_cabac_spu.h  h264_chroma_template_spu.c  h264_deblock_spu.h  h264_direct_spu.c  h264_direct_spu.h  h264_dma.c  h264_dma.h  h264_idct_spu.h  h264_intra_spu.c  h264_intra_spu.h  h264_luma_template_spu.c  h264_mc_spu.h  h264_pred_spu.h  h264_tables.c  h264_tables.h  h264_types_spu.h  spe_ed.c  spe_mbd.c  types_spu.h
benchmark/h264dec/libavcodec/x86/: dsputil_mmx.c  h264dsp_mmx.c
benchmark/h264dec/libavutil/: Makefile.am
benchmark/kmeans/seq/: Makefile
benchmark/plots/: bmarks_encore_plots.tex
benchmark/plots/ccnuma-40/: bodytrack.csv  bodytrack.gle  c-ray-mt.csv  c-ray-mt.gle  geomean_pthread_ompss.tex  geomean_pthread_pinned_ompss.tex  h264dec.csv  h264dec.gle  kmeans.csv  kmeans.gle  md5.csv  md5.gle  ray-rot.csv  ray-rot.gle  rgbyuv.csv  rgbyuv.gle  rot-cc.csv  rot-cc.gle  rot.csv  rot.gle  streamcluster.csv  streamcluster.gle  tinyjpeg.csv  tinyjpeg.gle
benchmark/plots/tilegx36/: bodytrack.csv  bodytrack.gle  c-ray-mt.csv  c-ray-mt.gle  geomean_pthread_ompss.tex  geomean_pthread_pinned_ompss.tex  h264dec.csv  h264dec.gle  kmeans.csv  kmeans.gle  md5.csv  md5.gle  ray-rot.csv  ray-rot.gle  rgbyuv.csv  rgbyuv.gle  rot-cc.csv  rot-cc.gle  rot.csv  rot.gle  streamcluster.csv  streamcluster.gle  tinyjpeg.csv  tinyjpeg.gle
benchmark/results/ccnuma-40/default/: bodytrack_pthread.out  bodytrack_pthread_pinned.out  bodytrack_seq.out  c-ray-mt_pthread.out  c-ray-mt_pthread_pinned.out  c-ray-mt_seq.out  h264dec_pthread.out  h264dec_pthread_pinned.out  h264dec_seq.out  kmeans_pthread.out  kmeans_pthread_pinned.out  kmeans_seq.out  md5_pthread.out  md5_pthread_pinned.out  md5_seq.out  ray-rot_pthread.out  ray-rot_pthread_pinned.out  ray-rot_seq.out  rgbyuv_pthread.out  rgbyuv_pthread_pinned.out  rgbyuv_seq.out  rot-cc_pthread.out  rot-cc_pthread_pinned.out  rot-cc_seq.out  rot_pthread.out  rot_pthread_pinned.out  rot_seq.out  streamcluster_pthread.out  streamcluster_pthread_pinned.out  streamcluster_seq.out  tinyjpeg_pthread.out  tinyjpeg_pthread_pinned.out  tinyjpeg_seq.out
benchmark/results/ccnuma-40/interleaved/: bodytrack_ompss.out  bodytrack_ompss_nosleep.out  bodytrack_pthread.out  bodytrack_pthread_pinned.out  bodytrack_seq.out  c-ray-mt_ompss.out  c-ray-mt_pthread.out  c-ray-mt_pthread_pinned.out  c-ray-mt_seq.out  h264dec_ompss.out  h264dec_ompss_wf.out  h264dec_pthread.out  h264dec_pthread_pinned.out  h264dec_seq.out  kmeans_ompss.out  kmeans_pthread.out  kmeans_pthread_pinned.out  kmeans_seq.out  md5_ompss.out  md5_pthread.out  md5_pthread_pinned.out  md5_seq.out  ray-rot_ompss.out  ray-rot_pthread.out  ray-rot_pthread_pinned.out  ray-rot_seq.out  rgbyuv_ompss.out  rgbyuv_pthread.out  rgbyuv_pthread_pinned.out  rgbyuv_seq.out  rot-cc_ompss.out  rot-cc_pthread.out  rot-cc_pthread_pinned.out  rot-cc_seq.out  rot_ompss.out  rot_pthread.out  rot_pthread_pinned.out  rot_seq.out  streamcluster_ompss.out  streamcluster_pthread.out  (+6 more)
benchmark/results/tilegx36/: bodytrack_pthread.out  bodytrack_pthread_pinned.out  bodytrack_seq.out  c-ray-mt_ompss.out  c-ray-mt_pthread.out  c-ray-mt_pthread_pinned.out  c-ray-mt_seq.out  h264dec_ompss.out  h264dec_ompss_wf.out  h264dec_pthread.out  h264dec_pthread_pinned.out  h264dec_seq.out  rot-cc_ompss.out  rot-cc_pthread.out  rot-cc_pthread_pinned.out  rot-cc_seq.out  rot_ompss.out  rot_pthread.out  rot_pthread_pinned.out  rot_seq.out
benchmark/results/tilegx36/broken/: kmeans_ompss.out  kmeans_pthread.out  kmeans_pthread_pinned.out  kmeans_seq.out  md5_ompss.out  md5_pthread.out  md5_pthread_pinned.out  md5_seq.out  ray-rot_ompss.out  ray-rot_pthread.out  ray-rot_pthread_pinned.out  ray-rot_seq.out  rgbyuv_ompss.out  rgbyuv_pthread.out  rgbyuv_pthread_pinned.out  rgbyuv_seq.out  streamcluster_ompss.out  streamcluster_pthread.out  streamcluster_pthread_pinned.out  streamcluster_seq.out  tinyjpeg_ompss.out  tinyjpeg_pthread.out  tinyjpeg_pthread_pinned.out  tinyjpeg_seq.out
benchmark/rgbyuv/seq/: Makefile
benchmark/scripts/: benchmark.pl  plot.pl
benchmark/streamcluster/seq/: Makefile
benchmark/tinyjpeg/seq/: Makefile  conv_yuvbgr.c  huffman.c  jidctflt.c  loadjpeg.c  tinyjpeg-internal.h  tinyjpeg-parse.c  tinyjpeg.c  tinyjpeg.h
doc/: Project.rtf
doc/presentation/: PAAV2015 Project Presentation.pptx
src/LLVMPass/: CMakeLists.txt  IndependentLoopPass.cpp  IndependentLoopPass.h  MultiBlockInstIterator.cpp  MultiBlockInstIterator.h
src/Samples/: CMakeLists.txt  sample1.c  samples.c  test1.c  test10.c  test11.c  test12.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c
